Fix alignment issues

--- a/ui/client-react/src/components/fields/formulaField.scss
+++ b/ui/client-react/src/components/fields/formulaField.scss
@@ -26,8 +26,8 @@
         }
     }
 }
-
-.filledFormula {
-    @include small-breakpoint {
-    }
-}
+//
+//.filledFormula {
+//    @include small-breakpoint {
+//    }
+//}
